Fixed formatting on mobile devices.

--- a/sidebar.css
+++ b/sidebar.css
@@ -24,6 +24,7 @@
     cursor: pointer;
     border: 0;
     padding: 1.2vw;
+    transition: 250ms linear;
 }
 .toggle_button:hover {
     transition: 250ms linear;
@@ -112,4 +113,57 @@ a.sidebar_link:hover {
 #sidebar.expand .sidebar_link[data-bs-toggle="collapse"].collapsed::after {
     transform: rotate(45deg);
     transition: all .2s ease-out;
+}
+@media only screen and (max-device-width: 1024px) {
+    #sidebar {
+        width: 10vw;
+        min-width: 10vw;
+        min-height: 100vh;
+        z-index: 1000;
+        transition: all .25s ease-in-out;
+        background-color: #515e66;
+        display: flex;
+        flex-direction: column;
+    }
+    #sidebar.expand {
+        width: 70vw;
+        min-width: 70vw;
+    }
+    .toggle_button {
+        background-color: transparent;
+        cursor: pointer;
+        border: 0;
+        padding: 2vw;
+        transition: 250ms linear;
+    }
+    .toggle_button i {
+        transition: 250ms linear;
+        font-size: 6vw;
+        color: white;
+    }
+    .sidebar_logo {
+        margin: auto 0;
+    }
+    .sidebar_logo a {
+        transition: 250ms linear;
+        color: white;
+        font-weight: 600;
+        font-size: 7vw;
+        font-family: 'Concert One', sans-serif;
+        text-decoration: none;
+        padding-left: 2vw;
+    }
+    a.sidebar_link {
+        transition: 250ms linear;
+        padding: 3vw;
+        color: white;
+        display: block;
+        font-size: 4vw;
+        white-space: nowrap;
+        border-left: 3px solid transparent;
+    }
+    .sidebar_link i {
+        font-size: 3vw;
+        margin-right: .75rem;
+    }
 }
